--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#003262">
     <link href="/favicon.ico" rel="shortcut icon" />
     <%= render 'layouts/shim'%>
+    <%= render 'layouts/metadata'%>
     <title><%= yield(:title) %> | Progressive Candidate Assessment</title>
 
     <%= stylesheet_link_tag    "application" %>
@@ -14,7 +15,7 @@
     <%= csrf_meta_tags %>
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <% if Rails.env.production? %>
+    
       <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -22,7 +23,7 @@
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-112466457-1', 'auto');
       </script>
-    <% end %>
+    
   </head>
 
   <body id="all">
