--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <link href="/favicon.ico" rel="shortcut icon" />
     <%= render 'layouts/shim'%>
     <%= render 'layouts/metadata'%>
-    <title><%= yield(:title) %> | Progressive Candidate Assessment</title>
+    <title><%= yield(:title) %> | Progressive Candidate Assessment for Polk County</title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
@@ -15,7 +15,7 @@
     <%= csrf_meta_tags %>
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    
+    <% if Rails.env.production? %>
       <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,7 +23,7 @@
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-112466457-1', 'auto');
       </script>
-    
+    <% end %>
   </head>
 
   <body id="all">
