--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -18,8 +18,14 @@
         <%= f.submit 'Send', class: 'btn' %>
       <% end %>
     </div>
+    <br>
     <div class="row">
       <h3>Contact us on Facebook<h3>
     </div>
+    <div class="row">
+      <%= render 'messages/messenger'%>
+    </div>
+    <br>
+    
   </div>
 </div>
