Added Google tags manager

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,11 @@
         ga('create', 'UA-112466457-1', 'auto');
       </script>
     <% end %>
+    <%= render 'layouts/tagsHead'%>
   </head>
 
   <body id="all">
-    
+    <%= render 'layouts/tagsBody'%>
     
     <div id="content">
       <%= render 'layouts/head'%>
