Added handling for candidates with no elaboration

--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -2,8 +2,8 @@
 <main class="main" id="page"> 
   <div class="row">  
     <h1>Candidate Responses - <%= @candidate.name %></h1>
-    <p>In addition to answering the 20 survey questions, this candidate provided the following elaboration of 
-        their positions regarding several progressive issues.
+    <p>
+      <%= @candidate.info %>
     </p>
   </div>
   <div class="row"> 
