--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row">  
     <h1>Candidate Responses - <%= @candidate.name %></h1>
     <p>
-      <%= @candidate.info %>
+      <%= infoText @candidate %>
     </p>
   </div>
   <div class="row"> 
