--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -17,13 +17,9 @@
       </div>
       <div class="responsive-nav-social-right">
         <ul class="menu vertical medium-horizontal">
-					<li><%= link_to "Home",     root_path %></li>
-          <li><%= link_to "Contact Us",     new_message_path(@message) %></li>
-          <% if logged_in? %>
-            <li><%= link_to "Users", users_path %></li>
-            <li><%= link_to "Candidates", candidates_path %></li>
-            <li><%= link_to "Log out", logout_path, method: :delete %></li>
-          <% end %>
+					<li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Contact Us", new_message_path(@message) %></li>
+          <li><%= link_to "Candidate Forum", forum_path %></li>
 			  </ul>
       </div>
     </div>
