--- a/app/assets/stylesheets/event_page.scss
+++ b/app/assets/stylesheets/event_page.scss
@@ -1,46 +1,124 @@
 //Scss file for event_page
+$primary-color: #005D7D;
+
 //Full screen hero scss
-$hero-full-screen-bg: url('https://images.pexels.com/photos/378273/pexels-photo-378273.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb') center center no-repeat;
-$hero-full-screen-bg-size: cover;
-$hero-full-screen-text-color: white;
-.hero-full-screen {
-  height: 100vh;
+$hero-height: 100vh;
+
+.hero-section {
+  background: url('https://static.pexels.com/photos/248064/pexels-photo-248064.jpeg') 50% no-repeat;
+  background-size: cover;
+  height: $hero-height;
+  text-align: center;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  background: $hero-full-screen-bg;
-  background-size: $hero-full-screen-bg-size;
-  .middle-content-section {
-    text-align: center;
-    color: $hero-full-screen-text-color;
+  justify-content: center;
+
+  .hero-section-text {
+    color: white;
+    text-shadow: 1px 1px 2px black;
   }
-  .top-content-section {
-    width: 100%;
+}
+
+
+.card {
+  .card-image {
+    transition: .5s ease;
+    backface-visibility: hidden;
   }
-  .bottom-content-section {
-    padding: 1rem;
-    svg {
-      height: rem-calc(60);
-      width: rem-calc(60);
-      fill: $hero-full-screen-text-color;
-    }
-  } // optional demo styles
-  .top-bar {
-    background: transparent;
-    .menu {
-      background: transparent;
-    }
-    .menu-text {
-      color: $hero-full-screen-text-color;
-    }
-    .menu li {
-      display: flex;
-      align-items: center;
-    }
-    .menu a {
-      color: $hero-full-screen-text-color;
-      font-weight: bold;
+  .overlay-text {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: left;
+  }
+  position: relative;
+  width: 100%;
+}
+
+.card:hover {
+  .card-image {
+    opacity: 0.3;
+  }
+  .overlay-text {
+    opacity: 1;
+  }
+}
+
+#map-section {
+  height: 24rem;
+  width: 100%;
+}
+
+.scroll-top-wrapper {
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
+  text-align: center;
+  z-index: 99999999;
+  background-color: #777777;
+  color: #eeeeee;
+  width: 50px;
+  height: 48px;
+  line-height: 48px;
+  right: 30px;
+  bottom: 30px;
+  padding-top: 2px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.scroll-top-wrapper:hover {
+  background-color: #888888;
+}
+
+.scroll-top-wrapper.show {
+  visibility: visible;
+  cursor: pointer;
+  opacity: 1.0;
+}
+
+.scroll-top-wrapper i.fa {
+  line-height: inherit;
+}
+
+$marketing-site-three-up-width: 900px;
+
+.marketing-site-three-up {
+  text-align: center;
+  padding: 2rem 0;
+
+  .row {
+    max-width: $marketing-site-three-up-width;
+  }
+
+  .columns {
+    margin-bottom: 1rem;
+
+    @media screen and (min-width: 40em) {
+      margin-bottom: 0;
     }
   }
+
+  .fa {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    color: $primary-color;
+  }
+}
+
+.marketing-site-three-up-headline {
+  margin-bottom: 2rem;
+  font-size: 24px;
 }
