--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,28 +1,22 @@
-<div class="responsive-nav-social-mobile" data-responsive-toggle="responsive-nav-social" data-hide-for="medium">
-  <div class="responsive-nav-social-mobile-left">
-    <ul class="menu">
-      <%= link_to image_tag("logo.png", alt: "PCPDC Logo"),  root_path %>
-    </ul>
-  </div>
-  <div class="responsive-nav-social-mobile-right">
-    <button class="menu-icon" type="button" data-toggle="responsive-nav-social"></button>
-  </div>
-</div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#003262">
+    <link href="/favicon.ico" rel="shortcut icon" />
+    <%= render 'layouts/shim'%>
+    <%= render 'layouts/metadata'%>
+    <title><%= yield(:title) %> | Progressive Candidate Assessment for Polk County</title>
 
-<div data-sticky-container>
-  <div class="responsive-nav-social" id="responsive-nav-social" data-options="marginTop:0;">
-    <div class="row align-justify align-middle" id="responsive-menu">
-      <div class="responsive-nav-social-left hide-for-small-only" >
-        <%= link_to image_tag("logo.png", alt: "PCPDC Logo"),  root_path %>
-      </div>
-      <div class="responsive-nav-social-right">
-        <ul class="menu vertical medium-horizontal">
-					<li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Contact Us", new_message_path(@message) %></li>
-          <li><%= link_to "Candidate Forum", forum_path %></li>
-			  </ul>
-      </div>
-    </div>
-  </div>
-</div>
+    <%= stylesheet_link_tag    "application" %>
+    
+    <%= javascript_include_tag :modernizr %>
+    <%= csrf_meta_tags %>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <%= render 'layouts/analytics'%>
+    <%= render 'layouts/tagsHead'%>
 
+    <script src="//maps.google.com/maps/api/js?key=[your API key]"></script>
+    <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+    <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
+</head>
