--- a/app/assets/stylesheets/event_page.scss
+++ b/app/assets/stylesheets/event_page.scss
@@ -4,14 +4,22 @@ $primary-color: #005D7D;
 //Full screen hero scss
 $hero-height: 100vh;
 
+//Card image variables
+$image-hover-wrapper-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+$image-hover-wrapper-transition-delay: 0.25s;
+$image-hover-wrapper-icon-size: 24px;
+
 .hero-section {
   background: url('https://static.pexels.com/photos/248064/pexels-photo-248064.jpeg') 50% no-repeat;
-  background-size: cover;
+  background-size: auto 100%;
   height: $hero-height;
+  width: 100%;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-position: center top;
+  background-repeat: no-repeat;  
 
   .hero-section-text {
     color: white;
@@ -20,33 +28,65 @@ $hero-height: 100vh;
 }
 
 
-.card {
-  .card-image {
-    transition: .5s ease;
-    backface-visibility: hidden;
-  }
-  .overlay-text {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: left;
-  }
+.image-hover-wrapper {
   position: relative;
-  width: 100%;
+
+  a {
+    display: inline-block;
+    letter-spacing: normal;
+    line-height: initial;
+    margin: 0;
+    padding: 0;
+    position: relative;
+
+    img {
+      float: left;
+      overflow: hidden;
+      width: 100%;
+    }
+
+    .image-hover-wrapper-reveal {
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      display: inline;
+      height: 100%;
+      margin-left: -100%;
+      opacity: 0;
+      position: absolute;
+      width: 100%;
+      z-index: 80;
+      transition: $image-hover-wrapper-transition;
+      transition-delay: $image-hover-wrapper-transition-delay;
+
+      &:hover {
+        opacity: 1;
+        transition: $image-hover-wrapper-transition;
+      }
+
+      &:hover p {
+        opacity: 1;
+        transform: translateY(-100%);
+        transition: $image-hover-wrapper-transition;
+        transition-delay: $image-hover-wrapper-transition-delay;
+      }
+
+      p {
+        bottom: 0;
+        display: block;
+        opacity: 0;
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        transition: $image-hover-wrapper-transition;
+      }
+    }
+
+    .fa {
+      font-size: $image-hover-wrapper-icon-size;
+    }
+  }
 }
 
-.card:hover {
-  .card-image {
-    opacity: 0.3;
-  }
-  .overlay-text {
-    opacity: 1;
-  }
-}
 
 #map-section {
   height: 24rem;
