--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -6,68 +6,52 @@
       <%= infoText @candidate %>
     </p>
   </div>
-  <% if @candidate.section1 %>
-    <div class="row"> 
-      <h4>Seeking a fair, honest, and open government that works for all:</h4>
-    </div>
-    <div class="row"> 
+  <div class="row"> 
+    <% if @candidate.section1 %>
+        <h4>Seeking a fair, honest, and open government that works for all:</h4>
         <p><%= @candidate.section1 %></p>
-    </div>
-  <% end %>
-  <% if @candidate.section2 %>
-    <div class="row"> 
-      <h4>Seeking broader rights and better wages for workers:</h4>
-    </div>
-    <div class="row">
-      <p><%= @candidate.section2 %></p>
-    </div>
-  <% end %>
-  <% if @candidate.section3 %>
-    <div class="row"> 
-      <h4>Seeking to maintain a strong economy:</h4>
-    </div>
-    <div class="row">
-      <p><%= @candidate.section3 %></p>
-    </div>
-  <% end %>
-  <% if @candidate.section4 %>
-    <div class="row"> 
-      <h4>Seeking to provide a quality public education for all children, as guaranteed by our State Constitution:</h4>
-    </div>
-    <div class="row">
-      <p><%= @candidate.section4 %></p>
-    </div>
-  <% end %>
-  <% if @candidate.section5 %>
-    <div class="row"> 
-      <h4>Seeking justice and equality for all:</h4>
-    </div>
-    <div class="row">
-      <p><%= @candidate.section5 %></p>
-    </div>
-  <% end %>
-  <% if @candidate.section6 %>
-    <div class="row"> 
-      <h4>Seeking recognition of the fundamental right to affordable housing, health care and retirement security:</h4>
-    </div>
-    <div class="row">
-      <p><%= @candidate.section6 %></p>
-    </div>
-  <% end %>
-  <% if @candidate.section7 %>
-    <div class="row"> 
-      <h4>Seeking a clean and safe environment:</h4>
-    </div>
-    <div class="row">
-      <p><%= @candidate.section7 %></p>
-    </div>
-  <% end %>
-  <% if @candidate.section8 %>
-    <div class="row"> 
-      <h4>Seeking a peaceful and secure world:</h4>
-    </div>
-    <div class="row">
-      <p><%= @candidate.section8 %></p>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
+  <div class="row"> 
+    <% if @candidate.section2 %>
+        <h4>Seeking broader rights and better wages for workers:</h4>
+        <p><%= @candidate.section2 %></p>
+    <% end %>
+  </div>
+  <div class="row"> 
+    <% if @candidate.section3 %>
+        <h4>Seeking to maintain a strong economy:</h4>
+        <p><%= @candidate.section3 %></p>
+    <% end %>
+  </div>
+  <div class="row"> 
+    <% if @candidate.section4 %>
+        <h4>Seeking to provide a quality public education for all children, as guaranteed by our State Constitution:</h4>
+        <p><%= @candidate.section4 %></p>
+    <% end %>
+  </div>
+  <div class="row"> 
+    <% if @candidate.section5 %>
+        <h4>Seeking justice and equality for all:</h4>
+        <p><%= @candidate.section5 %></p>
+    <% end %>
+  </div>
+  <div class="row"> 
+    <% if @candidate.section6 %>
+        <h4>Seeking recognition of the fundamental right to affordable housing, health care and retirement security:</h4>
+        <p><%= @candidate.section6 %></p>
+    <% end %>
+  </div>
+  <div class="row"> 
+    <% if @candidate.section7 %>
+        <h4>Seeking a clean and safe environment: <br></h4>
+        <p><%= @candidate.section7 %></p>
+    <% end %>
+  </div>
+  <div class="row"> 
+    <% if @candidate.section8 %>
+        <h4>Seeking a peaceful and secure world:</h4>
+        <p><%= @candidate.section8 %></p>
+    <% end %>
+  </div>
 </div>
