--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%= render 'layouts/head'%>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#003262">
+    <link href="/favicon.ico" rel="shortcut icon" />
+    <%= render 'layouts/shim'%>
+    <%= render 'layouts/metadata'%>
+    <title><%= yield(:title) %> | Progressive Candidate Assessment for Polk County</title>
+
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag :modernizr %>
+    <%= csrf_meta_tags %>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <%= render 'layouts/analytics'%>
+    <%= render 'layouts/tagsHead'%>
+  </head>
 
   <body id="all">
     <%= render 'layouts/tagsBody'%>
     
     <div id="content">
-      <%= render 'layouts/header'%>
+      <%= render 'layouts/head'%>
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
@@ -14,6 +31,5 @@
       <%= render 'layouts/footer'%>
       
     </div>
-    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
   </body>
 </html>
