--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,9 +17,9 @@
       </div>
       <div class="responsive-nav-social-right">
         <ul class="menu vertical medium-horizontal">
-					<li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Contact Us", new_message_path(@message) %></li>
-          
+					<li><%= link_to "Home",     root_path %></li>
+          <li><%= link_to "Contact Us",     new_message_path(@message) %></li>
+          <li><a href="https://pcpdc-candidate-forum-tickets.eventbrite.com">Candidate Forum</a></li>
 			  </ul>
       </div>
     </div>
