--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#003262">
     <link href="/favicon.ico" rel="shortcut icon" />
     <%= render 'layouts/shim'%>
     <%= render 'layouts/metadata'%>
@@ -13,7 +12,6 @@
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= javascript_include_tag :modernizr %>
     <%= csrf_meta_tags %>
-    <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <%= render 'layouts/analytics'%>
     <%= render 'layouts/tagsHead'%>
@@ -23,7 +21,7 @@
     <%= render 'layouts/tagsBody'%>
     
     <div id="content">
-      <%= render 'layouts/head'%>
+      <%= render 'layouts/header'%>
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
