--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -32,7 +32,7 @@
                     </p>
             </div>
             <div class="show-more">
-                <a>Show more</a>
+                <a>Show more >></a>
             </div>
         </div>​
     </div>
