--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -4,7 +4,7 @@
         <div class="text-container">
             <h1>Candidate Ratings based on Progressive Questionaire</h1>
             <h2>2018 Candidate Assessment and Voter Awareness Initiative</h2>
-            <div class="content hideContent">
+            <div class="content showContent">
                     <p>
                         The energy and resources ready and waiting to support Progressive Democratic candidates 
                         are at an all-time high. The Polk County Progressive Democratic Caucus (PCPDC) Candidate 
@@ -32,7 +32,7 @@
                     </p>
             </div>
             <div class="show-more">
-                <a>Show more >></a>
+                <a>Show less <<</a>
             </div>
         </div>​
     </div>
