--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div data-sticky-container>
+<div class="sticky-header">
   <div class="responsive-nav-social" id="responsive-nav-social" data-options="marginTop:0;">
     <div class="row align-justify align-middle" id="responsive-menu">
       <div class="responsive-nav-social-left hide-for-small-only" >
