--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -36,7 +36,17 @@
             </div>
         </div>​
     </div>
+    <hr>
+    <div class="row">
+        <div class="forum">
+            <h5>Click the button below to reserve your seat at the PCPDC Candidate Forum!</h5>
+            <a class="forum-btn" href="https://pcpdc-candidate-forum-tickets.eventbrite.com">Click to RSVP</a>
+        </div>
+    </div>
 </div>
+<br>
 <%= render 'candidates/candidatecard'%>
 <br>
-<%= render 'candidates/absentCandidateList'%>
+<% if @pastDue.any? %>
+    <%= render 'candidates/absentCandidateList'%>
+<% end %>
