--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -39,8 +39,8 @@
     <hr>
     <div class="row">
         <div class="forum">
-            <h5>All of the candidates listed are participating in the forum.  Click the button below to reserve your seat at the PCPDC Candidate Forum!</h5>
-            <a class="forum-btn" href="https://pcpdc-candidate-forum-tickets.eventbrite.com">Click to RSVP</a>
+            <h5>All of the candidates listed are participating in the Polk County Progressives - Candidate Forum.  Click the button below to reserve your seat at the PCPDC Candidate Forum!</h5>
+            <a class="forum-btn" href="https://pcpdc-candidate-forum-tickets.eventbrite.com">Click to Register</a>
         </div>
     </div>
 </div>
