Fixed the top bar on mobile

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="responsive-nav-social-mobile" data-responsive-toggle="responsive-nav-social" data-hide-for="medium">
+<div class="sticky responsive-nav-social-mobile" data-responsive-toggle="responsive-nav-social" data-hide-for="medium">
   <div class="responsive-nav-social-mobile-left">
     <ul class="menu">
       <%= link_to image_tag("logo.png", alt: "PCPDC Logo"),  root_path %>
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div class="sticky-header">
+<div class="sticky header">
   <div class="responsive-nav-social" id="responsive-nav-social" data-options="marginTop:0;">
     <div class="row align-justify align-middle" id="responsive-menu">
       <div class="responsive-nav-social-left hide-for-small-only" >
