Removed past dues table

--- a/app/views/candidates/_absentCandidateList.html.erb
+++ b/app/views/candidates/_absentCandidateList.html.erb
@@ -2,12 +2,14 @@
     <h4>The following candidates were invited to participate and received several 
     reminders, but to date they have been non-responsive.</h4>
 </div>
-<% @pastDue.each do |pastDue| %>
-    <div class="row">
-        <h5><%= pastDue.name %></h4>
-    </div>
-    <div class="row">
-        <p><%= pastDue.race %></p>
-        <br>
-    </div>
+<% @candidates.each do |candidate| %>
+    <% if candidate.responded == 0 %>    
+        <div class="row">
+            <h5><%= candidate.name %></h4>
+        </div>
+        <div class="row">
+            <p><%= candidate.race %></p>
+            <br>
+        </div>
+    <% end %>
 <% end %>
