Hide the show less on large screens

--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -26,7 +26,7 @@
                         within the county of each candidate’s overall alignment with progressive values.
                     </p>
             </div>
-            <div class="show-more">
+            <div class="show-more hide-for-large">
                 <a>Show less <<</a>
             </div>
         </div>​
