--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -34,8 +34,8 @@
     <hr>
     <div class="row">
         <div class="forum">
-            <h5>All of the candidates listed are participating in the Polk County Progressives - Candidate Forum.  Click the button below to reserve your seat at the PCPDC Candidate Forum!</h5>
-            <a class="forum-btn" href="https://pcpdc-candidate-forum-tickets.eventbrite.com">Click to Register</a>
+            <h5>All of the candidates listed on this page will be participating in the Polk County Progressives - Candidate Forum on July 16th. Click the button below to learn more about the Forum!</h5>
+            <a class="forum-btn" href="https://pcpdc-candidate-forum-tickets.eventbrite.com">Learn More</a>
         </div>
     </div>
 </div>
