Updated final paragraph and removed eventbrite links

--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -32,10 +32,15 @@
         </div>​
     </div>
     <hr>
-    <div class="row">
-        <div class="forum">
-            <h5>All of the candidates listed on this page will be participating in the Polk County Progressives - Candidate Forum on July 16th. Click the button below to learn more about the Forum!</h5>
-            <a class="forum-btn" href="https://pcpdc-candidate-forum-tickets.eventbrite.com">Learn More</a>
+    <div class="row text-container">
+        <div class="forum content">
+            <h4>Congratulations to the 10 Democratic candidates who participated in our Candidate Forum on July 16th, in Bartow.
+            Thank you to Dr. Susan MacManus, our Forum Moderator, as well.</h4>
+
+            <p>Over 100 members of the public and more than half a dozen members of the 
+            media attended the event. This was an opportunity for progressive voters to watch, 
+            listen and learn, and for the candidates to answer thoughtful questions and shine.<br>
+            Video of the Forum will be posted on YouTube and this site soon.</p>
         </div>
     </div>
 </div>
