Added css for hover cards and changed positioning

--- a/app/views/candidates/home.html.erb
+++ b/app/views/candidates/home.html.erb
@@ -3,6 +3,17 @@
     <div class="row">
         <div class="text-container">
             <h1>Candidate Ratings based on Progressive Questionaire</h1>
+            <div class="card">
+                <div class="forum content">
+                    <h4>Congratulations to the 10 Democratic candidates who participated in our Candidate Forum on July 16th, in Bartow.
+                    Thank you to Dr. Susan MacManus, our Forum Moderator, as well.</h4>
+
+                    <p>Over 100 members of the public and more than half a dozen members of the 
+                    media attended the event. This was an opportunity for progressive voters to watch, 
+                    listen and learn, and for the candidates to answer thoughtful questions and shine.<br>
+                    Video of the Forum will be posted on YouTube and this site soon.</p>
+                </div>
+            </div>
             <h2>2018 Candidate Assessment and Voter Awareness Initiative</h2>
             <div class="content showContent">
                     <p>
@@ -30,19 +41,7 @@
                 <a>Show less <<</a>
             </div>
         </div>​
-    </div>
-    <hr>
-    <div class="row text-container">
-        <div class="forum content">
-            <h4>Congratulations to the 10 Democratic candidates who participated in our Candidate Forum on July 16th, in Bartow.
-            Thank you to Dr. Susan MacManus, our Forum Moderator, as well.</h4>
-
-            <p>Over 100 members of the public and more than half a dozen members of the 
-            media attended the event. This was an opportunity for progressive voters to watch, 
-            listen and learn, and for the candidates to answer thoughtful questions and shine.<br>
-            Video of the Forum will be posted on YouTube and this site soon.</p>
-        </div>
-    </div>
+    </div>    
 </div>
 <br>
 <%= render 'candidates/candidatecard'%>
