--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -325,6 +325,7 @@ textarea {
 .forum {
   text-align: center;
 
+
   .forum-btn {
     background: $textH1;
     border: 1px solid white;
@@ -345,7 +346,16 @@ textarea {
     padding-right: 28px;
     padding-left: 28px;
     text-align: center;
-    vertical-align: middle;
     
   }
 }
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+  
