--- a/app/assets/stylesheets/candidates.scss
+++ b/app/assets/stylesheets/candidates.scss
@@ -15,6 +15,7 @@ $about-the-candidate-separator-thickness: 0.125rem;
   .content {
     font-family: 'gotham_bookregular';
     color: $textMain;
+    padding: 2px 16px;
   }
 }
 
